<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parcelable Example</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_hnt_sname">Student Name</string>
    <string name="str_hnt_semail">Student Email</string>
    <string name="str_hnt_saddress">Student Address</string>
    <string name="str_hnt_scourse">Student Course</string>
	<string name="str_hnt_sage">Student Age</string>
	<string name="str_btn_ok">OK</string>
</resources>