<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    tools:context=".MainActivity" 
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_sname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="text" 
        android:hint="@string/str_hnt_sname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/str_hnt_semail"
        android:id="@+id/et_semail" />

    <EditText
        android:id="@+id/et_sage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="number" 
        android:hint="@string/str_hnt_sage"/>
    
    <EditText
        android:id="@+id/et_saddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="text" 
        android:hint="@string/str_hnt_saddress"/>
    
    <EditText
        android:id="@+id/et_scource"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="text" 
        android:hint="@string/str_hnt_scourse"/>

    
    <Button 
        android:id="@+id/btn_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_ok"
        />



</LinearLayout>